--- a/.classpath
+++ b/.classpath
@@ -2,23 +2,23 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/collections-generic-4.01.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/colt-1.2.0.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/concurrent-1.3.4.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/j3d-core-1.3.1.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/jung-3d-2.0.1.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/jung-3d-demos-2.0.1.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/jung-algorithms-2.0.1.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/jung-api-2.0.1.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/jung-graph-impl-2.0.1.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/jung-io-2.0.1.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/jung-jai-2.0.1.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/jung-jai-samples-2.0.1.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/jung-samples-2.0.1.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/jung-visualization-2.0.1.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/stax-api-1.0.1.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/vecmath-1.3.1.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/VisMAN Libraries/wstx-asl-3.2.6.jar"/>
-	<classpathentry kind="lib" path="/home/david/Dropbox/SQRG/David Petras/XML Generator/Libraries/junit-4.10.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/collections-generic-4.01.jar"/>
+	<classpathentry kind="lib" path="lib/colt-1.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/concurrent-1.3.4.jar"/>
+	<classpathentry kind="lib" path="lib/j3d-core-1.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/jung-3d-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jung-3d-demos-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jung-algorithms-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jung-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jung-graph-impl-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jung-io-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jung-jai-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jung-jai-samples-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jung-samples-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jung-visualization-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/vecmath-1.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/wstx-asl-3.2.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
